remove init prompt
